kubernetes Scripts/realworld.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realworld-deployment
  labels:
    app: realworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realworld
  template:
    metadata:
      labels:
        app: realworld
    spec:
      containers:
      - name: realworld
        image: swr.ap-southeast-3.myhuaweicloud.com/cloud-realworld-dev/demo:v1.1
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: realworld-service
spec:
  type: NodePort
  selector:
    app: realworld
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30100

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realworld-ingress
  annotations: 
    kubernetes.io/elb.id: '805cb09d-0898-4c9f-8587-2eafd3063708'
    kubernetes.io/elb.ip: '10.0.1.101'
    kubernetes.io/elb.class: performance  
    kubernetes.io/elb.port: '3000'
spec:
  rules: 
  - host: ''
    http: 
      paths: 
      - path: '/'
        backend: 
          service:
            name: realworld-service  
            port: 
              number: 3000  
        property:
          ingress.beta.kubernetes.io/url-match-mode: STARTS_WITH
        pathType: ImplementationSpecific
  ingressClassName: cce
